--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':lib')
+
+    //recyclerview
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //circle imageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
