--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,8 +1,30 @@
-apply plugin: 'java-library'
+apply plugin: 'com.android.library'
+
+android {
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    compileSdkVersion = 29
+    buildToolsVersion = '29.0.3'
+    defaultConfig {
+        minSdkVersion 28
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
 
-sourceCompatibility = "8"
-targetCompatibility = "8"
