--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+        <activity
+            android:name=".ActivityHistoryPopupActivity"
+            android:theme="@style/AppTheme.CustomTheme" >
+        </activity>
+
     </application>
 
 </manifest>
