--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -26,5 +26,10 @@ dependencies {
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    def lifecycle_version = "2.2.0"
+    def arch_version = "2.1.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
 }
 
