Add goal button pop-up and change of theme.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:theme="@style/AppTheme.CustomTheme" >
         </activity>
 
+        <activity
+            android:name=".GoalBtnPopupActivity"
+            android:theme="@style/AppTheme.CustomTheme" >
+        </activity>
+
     </application>
 
 </manifest>
